Fix arrow alignment + padding

--- a/design/hials14/stylesheets/hials.css
+++ b/design/hials14/stylesheets/hials.css
@@ -864,6 +864,7 @@ ul.hials-nav-pills.nav-stacked>li+li {
     border-radius: 0;
     text-decoration: none;
     text-transform: uppercase;
+    padding-right: 25px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -880,6 +881,8 @@ ul.hials-nav-pills.nav-stacked>li+li {
     position:absolute;
     right: 8px;
     top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
 
